# inix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bochsrc  linker.ld
arch/amd64/: boot.S  paging.S
arch/amd64/boot/: parse.c
arch/amd64/init/: boot.S  parse.c
arch/hosted/: CMakeLists.txt
arch/hosted/boot/: boot.c
arch/hosted/mm/: phys.c  phys.cpp
arch/x86_64/: CMakeLists.txt  Econfig  Tconfig  linker.ld
arch/x86_64/boot/: boot.S  gdt.S  paging.S  params.c  params.h  parse.c  prep.c  sse.S
arch/x86_64/efi/: memory.h  prep.c
arch/x86_64/fpu/: sse.S
arch/x86_64/include/lock/: spinlock.h
arch/x86_64/include/mm/: phys.h  zone.h
arch/x86_64/irq/: common.c  idt.c  lidt.S  target.S
arch/x86_64/lock/: spinlock.S
arch/x86_64/mm/: paging.h  phys.c  phys.h  pml4.c  pml4.h  scratch.c  vm.c  vm.h  zone.c
drivers/block/memfs/: memfs.h
include/boot/: entry.h
include/inix/: defs.h  irq.h
include/inix/mm/: alloc.h  paging.h  phys.h  scratch.h  vm.h
include/libk/: string.h
kernel/: CMakeLists.txt  kernel.c
libk/: string.c
mm/: CMakeLists.txt  alloc.c  alloc.h  phys.c  phys.h  scratch.c  scratch.h  vm.c  vm.h
mm/alloc/: alloc.c  page.c  page.h
stand/x86/legacy/: Makefile  boot.S
sys/: .config
sys/arch/x86/: Kbuild.bootstrap.64
sys/arch/x86/boot/: Kbuild  params.c
sys/arch/x86/boot/efi/: Kbuild  prep.c
sys/arch/x86/include/boot/: params.h
sys/arch/x86/include/boot/efi/: memory.h
sys/arch/x86/include/mm/: pml4.h
sys/arch/x86_64/boot/: params.c
sys/arch/x86_64/efi/: prep.c
sys/arch/x86_64/irq/: gdt.h  idt.c  lidt.h  regs.h  route.c
sys/arch/x86_64/mm/: invlpg.S  invlpg.h  map.h  paging.h  phys.c  phys.h  scratch.c
sys/include/inix/: elf.h  irq.h
sys/include/inix/mm/: paging.h  phys.h  scratch.h  type.h
sys/kernel/: kernel.c
sys/mm/: phys.c  scratch.c
sys/mm/alloc/: alloc.c
